--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -116,7 +116,7 @@ services:
         REDASH_LOG_LEVEL: "INFO"
         REDASH_REDIS_URL: "redis://redis:6379/0"
         REDASH_DATABASE_URL: "postgresql://username:password@postgres/database_name"
-        REDASH_COOKIE_SECRET: generate_your_own_key #you can use "openssl rand -hex 30" command
+        REDASH_COOKIE_SECRET: e27ff2c68906e45ad2567281f29509f0103de5748d8aa28c65e2823d728f
       volumes:
         - redash_data:/redash/data
         - ./redash_config.json:/redash/config.json
